Closed
Bug 1974170
Opened 2 months ago
Closed 2 months ago
Firefox rendering gets stuck after enabling system titlebar
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
142 Branch
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox-esr140 | --- | unaffected |
firefox140 | --- | unaffected |
firefox141 | --- | unaffected |
firefox142 | --- | fixed |
People
(Reporter: gregp, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
Steps to reproduce:
- Right click the toolbar
- Click "Customize toolbar..."
- Enable the system titlebar by clicking "Title Bar"
- Try to exit customize mode by selecting another tab or clicking "Done"
Actual results:
The title of the window changes, but Customize mode does not go away
Expected results:
Customize mode goes away
Comment 1•2 months ago
|
||
Set release status flags based on info from the regressing bug 1972291
:stransky, since you are the author of the regressor, bug 1972291, could you take a look?
For more information, please visit BugBot documentation.
status-firefox140:
--- → unaffected
status-firefox141:
--- → unaffected
status-firefox-esr128:
--- → unaffected
status-firefox-esr140:
--- → unaffected
Flags: needinfo?(stransky)
Assignee | ||
Comment 2•2 months ago
|
||
That's very interesting indeed.
Assignee | ||
Comment 3•2 months ago
|
||
Okay, I think we can just remove the assert and keep the frame callback as is as we use it for vsync only anyway.
Assignee | ||
Updated•2 months ago
|
Flags: needinfo?(stransky)
Assignee | ||
Comment 4•2 months ago
|
||
Updated•2 months ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Comment 5•2 months ago
|
||
The content of attachment 9496945 [details] has been deleted for the following reason:
Requested by author
Pushed by stransky@redhat.com:
https://github.com/mozilla-firefox/firefox/commit/31a94bf8cedc
https://hg.mozilla.org/integration/autoland/rev/25e4aa14586a
[Wayland] Allow to rewrite wl_frame_callback handler r=emilio
Comment 7•2 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch
Updated•27 days ago
|
QA Whiteboard: [qa-triage-done-c143/b142]
You need to log in
before you can comment on or make changes to this bug.
Description
•