Bug 1974170 [Wayland] Allow to rewrite wl_frame_callback handler r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D255143